# openidconnect-rs

./: .codecov.yml  .gitignore  .travis.yml  Cargo.toml  README.md  UPGRADE.md
.github/workflows/: main.yml
examples/: discord.rs  entra.rs  facebook.rs  gitlab.rs  google.rs  microsoft.rs  okta_device_grant.rs
examples/google-idtoken/: Cargo.toml
examples/google-idtoken/src/: lib.rs
src/: authorization.rs  backchannel_logout.rs  claims.rs  client.rs  core.rs  discovery.rs  helpers.rs  http.rs  http_utils.rs  id_token.rs  jwt.rs  jwt_profile.rs  lib.rs  logout.rs  logout_token.rs  macros.rs  registration.rs  token.rs  types.rs  user_info.rs  verification.rs
src/core/: crypto.rs  jwk.rs  mod.rs  tests.rs
src/core/crypto/: mod.rs  ring.rs
src/core/jwk/: mod.rs  tests.rs
src/discovery/: mod.rs  tests.rs
src/id_token/: mod.rs  tests.rs
src/jwt/: mod.rs  tests.rs
src/registration/: mod.rs  tests.rs
src/types/: jwk.rs  jwks.rs  localized.rs  mod.rs  tests.rs
src/verification/: mod.rs  tests.rs
tests/: discovery.rs  lib.rs  registration.rs  rp_certification_code.rs  rp_certification_dynamic.rs  rp_common.rs
tests/rp_common/: mod.rs
