[package]
name = "openidconnect"
version = "3.0.0"
authors = ["David A. Ramos <ramos@cs.stanford.edu>"]
description = "OpenID Connect library"
license = "MIT"
repository = "https://github.com/ramosbugs/openidconnect-rs"
edition = "2021"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["reqwest", "rustls-tls"]
curl = ["oauth2/curl"]
reqwest = ["oauth2/reqwest"]
ureq = ["oauth2/ureq"]
native-tls = ["oauth2/native-tls"]
rustls-tls = ["oauth2/rustls-tls"]
accept-rfc3339-timestamps = []
accept-string-booleans = []
nightly = []

[dependencies]
base64 = "0.13"
# Disable 'time' dependency since it triggers RUSTSEC-2020-0071 and we don't need it.
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
thiserror = "1.0"
http = "0.2"
itertools = "0.10"
log = "0.4"
oauth2 = { version = "4.2.2", default-features = false }
rand = "0.8.5"
hmac = "0.12.1"
rsa = "0.7.2"
sha2 = { version = "0.10.6", features = ["oid"] } # Object ID needed for pkcs1v15 padding
p256 = "0.11.1"
p384 = "0.11.2"
dyn-clone = "1.0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_plain = "1.0"
serde_with = "1.13"
serde-value = "0.7"
url = { version = "2.1", features = ["serde"] }
subtle = "2.4"

[dev-dependencies]
color-backtrace = { version = "0.5" }
env_logger = "0.9"
pretty_assertions = "1.0"
reqwest_ = { package = "reqwest", features = [
    "blocking",
    "rustls-tls",
], version = "0.11", default-features = false }
retry = "1.0"
anyhow = "1.0"
